# jupyter_server_playground

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  changelog_entry.md  pyproject.toml  setup.cfg  setup.py  tbump.toml
.github/workflows/: check-release.yml  codeql-analysis.yml  create-changelog.yml  create-release.yml  downstream.yml  python-linux.yml  python-macos.yml  python-windows.yml  release-check.yml
docs/source/: conf.py
docs/source/other/: full-config.rst
examples/simple/simple_ext1/: handlers.py
examples/simple/simple_ext2/: handlers.py
jupyter_server/: _version.py  pytest_plugin.py  serverapp.py  traittypes.py  transutils.py  utils.py
jupyter_server/auth/: security.py
jupyter_server/base/: handlers.py
jupyter_server/extension/: application.py
jupyter_server/files/: handlers.py
jupyter_server/services/kernels/: handlers.py  kernelmanager.py
jupyter_server/services/sessions/: handlers.py
jupyter_server/templates/: page.html
jupyter_server/tests/: test_terminal.py
jupyter_server/tests/extension/: test_launch.py
jupyter_server/tests/services/kernels/: test_api.py
jupyter_server/tests/services/sessions/: test_api.py  test_manager.py
jupyter_server/tests/unix_sockets/: test_serverapp_integration.py
scripts/: __main__.py  bump_version.py  changelog_prep.sh  changelog_prep_script.py  create_release_commit.py  finalize_changelog.py  finalize_release_prep.py  generate_changelog.py  get_final_version.py  git_prep_script.py  parse_git_ref.py  prep_git.py  prep_npm_release.py  prep_python_release.py  prepare_changelog.py  release_check.sh  release_prep.sh  release_prep_script.py  release_prep_script_node.py  release_prep_script_python.py  test_release_helper.py  update_changelog.py  utils.py  verify_changelog.py
tests/services/kernels/: test_api.py
